--- a/requirements/ci.in
+++ b/requirements/ci.in
@@ -10,6 +10,7 @@ pytest
 pytest-benchmark
 pytest-socket
 pytest-timeout
+# ruff  # only take this for 3.11
 typeguard
 types-dataclasses
 types-Pillow
