--- a/pyproject.toml
+++ b/pyproject.toml
@@ -183,6 +183,8 @@ ignore = [
     "S101",  # Use of `assert` detected
     "SLF001",  # Private member accessed
     "PD011",  # Use `.to_numpy()` instead of `.values`
+    "FA102",  # Missing `from __future__ import annotations`, but uses PEP 604 union
+    "PERF203",  # `try`-`except` within a loop incurs performance overhead
 ]
 
 [tool.ruff.per-file-ignores]
