--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -165,3 +165,21 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
+
+  release-test:
+    name: Test release flow
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      - name: Prepare variables
+        id: prepare_variables
+        run: |
+          git fetch --tags --force
+          latest_tag=$(git describe --tags --abbrev=0)
+          echo "latest_tag=$(git describe --tags --abbrev=0)" >> "$GITHUB_ENV"
+          echo "date=$(date +'%Y-%m-%d')" >> "$GITHUB_ENV"
+          echo "tag_body=$(git tag -l ${latest_tag} --format='%(contents:body)')" >> "$GITHUB_ENV"
+      - run: echo "latest_tag is ${{ env.latest_tag }}"
+      - run: echo "Body is ${{ env.tag_body }}"
