Co-authored-by: Matthew Peveler <matt.peveler@gmail.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,10 +11,11 @@ on:
 
 jobs:
   build_and_publish:
-    # this doesn't make sense if you don't have the PyPI secret
-    if: github.repository == 'py-pdf/pypdf'
     name: Publish a new version of pypdf
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
 
     steps:
       # Ensure it's on PyPI
@@ -44,18 +45,14 @@ jobs:
         run: |
           git fetch --tags --force
           latest_tag=$(git describe --tags --abbrev=0)
+          latest_tag=$(git describe --tags --abbrev=0) >> "$GITHUB_ENV"
           echo "date=$(date +'%Y-%m-%d')" >> "$GITHUB_ENV"
-          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-          echo "tag_body<<$EOF" >> $GITHUB_ENV
-          echo "$(git --no-pager tag -l ${latest_tag} --format='%(contents:body)')" >> $GITHUB_ENV
-          echo "$EOF" >> $GITHUB_ENV
+          git --no-pager tag -l ${latest_tag} --format='%(contents:body)' >> tmpCHANGELOG.txt
       - name: Create GitHub Release 🚀
         uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ env.latest_tag }}
-          release_name: Version ${{ env.latest_tag }}, ${{ env.date }}
+          name: Version ${{ env.latest_tag }}, ${{ env.date }}
           draft: false
           prerelease: false
-          body: ${{ env.tag_body }}
+          body_path: tmpCHANGELOG.txt
