--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,11 +45,11 @@ jobs:
         run: |
           git fetch --tags --force
           latest_tag=$(git describe --tags --abbrev=0)
-          latest_tag=$(git describe --tags --abbrev=0) >> "$GITHUB_ENV"
+          echo "latest_tag=$(git describe --tags --abbrev=0)" >> "$GITHUB_ENV"
           echo "date=$(date +'%Y-%m-%d')" >> "$GITHUB_ENV"
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "tag_body<<$EOF" >> "$GITHUB_ENV"
-          git --no-pager tag -l ${latest_tag} --format='%(contents:body)' >> "$GITHUB_ENV"
+          git --no-pager tag -l "${latest_tag}" --format='%(contents:body)' >> "$GITHUB_ENV"
           echo "$EOF" >> "$GITHUB_ENV"
       - name: Create GitHub Release 🚀
         uses: softprops/action-gh-release@v1
