--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -22,10 +22,12 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11"]
-        use-cryptodome: [""]
+        use-crypto-lib: ["pycryptodome"]
         include:
+          - python-version: "3.9"
+            use-crypto-lib: "cryptography"
           - python-version: "3.10"
-            use-cryptodome: "false"
+            use-crypto-lib: ""
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
@@ -62,10 +64,14 @@ jobs:
       run: |
         pip install -r requirements/ci-3.11.txt
       if: matrix.python-version == '3.11'
-    - name: Remove cryptodome
+    - name: Remove pycryptodome
       run: |
         pip uninstall pycryptodome -y
-      if: matrix.use-cryptodome == 'false'
+      if: matrix.use-crypto-lib != 'pycryptodome'
+    - name: Install cryptography
+      run: |
+        pip install cryptography
+      if: matrix.use-crypto-lib == 'cryptography'
     - name: Install pypdf
       run: |
         pip install .
