--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,8 +11,6 @@ on:
 
 jobs:
   build_and_publish:
-    # this doesn't make sense if you don't have the PyPI secret
-    if: github.repository == 'py-pdf/pypdf'
     name: Publish a new version of pypdf
     runs-on: ubuntu-latest
 
@@ -48,15 +46,13 @@ jobs:
           echo "date=$(date +'%Y-%m-%d')" >> "$GITHUB_ENV"
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "tag_body<<$EOF" >> "$GITHUB_ENV"
-          git tag -l "${latest_tag}" --format='%(contents:body)' >> "$GITHUB_ENV"
+          git --no-pager tag -l "${latest_tag}" --format='%(contents:body)' >> "$GITHUB_ENV"
           echo "$EOF" >> "$GITHUB_ENV"
       - name: Create GitHub Release 🚀
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Version ${{ env.latest_tag }}, ${{ env.date }}
+          tag_name: ${{ env.latest_tag }}
+          name: Version ${{ env.latest_tag }}, ${{ env.date }}
           draft: false
           prerelease: false
           body: ${{ env.tag_body }}
