--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -59,11 +59,11 @@ jobs:
     - name: Install requirements (Python 3)
       run: |
         pip install -r requirements/ci.txt
-      if: matrix.python-version < '3.11'
+      if: matrix.python-version == '3.6' || matrix.python-version == '3.7' || matrix.python-version == '3.8' || matrix.python-version == '3.9' || matrix.python-version == '3.10'
     - name: Install requirements (Python 3.11)
       run: |
         pip install -r requirements/ci-3.11.txt
-      if: matrix.python-version >= '3.11'
+      if: matrix.python-version == '3.11' || matrix.python-version == '3.12.0-beta.4'
     - name: Remove pycryptodome
       run: |
         pip uninstall pycryptodome -y
