--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -41,14 +41,14 @@ jobs:
         key: cache-downloaded-files
     - name: Setup Python
       uses: actions/setup-python@v4
-      if: matrix.python-version != '3.11'
+      if: matrix.python-version == '3.6' || matrix.python-version == '3.7' || matrix.python-version == '3.8' || matrix.python-version == '3.9' || matrix.python-version == '3.10'
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
         cache-dependency-path: '**/requirements/ci.txt'
-    - name: Setup Python (3.11)
+    - name: Setup Python (3.11+)
       uses: actions/setup-python@v4
-      if: matrix.python-version == '3.11'
+      if: matrix.python-version == '3.11' || matrix.python-version == '3.12.0-beta.4'
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
@@ -60,7 +60,7 @@ jobs:
       run: |
         pip install -r requirements/ci.txt
       if: matrix.python-version == '3.6' || matrix.python-version == '3.7' || matrix.python-version == '3.8' || matrix.python-version == '3.9' || matrix.python-version == '3.10'
-    - name: Install requirements (Python 3.11)
+    - name: Install requirements (Python 3.11+)
       run: |
         pip install -r requirements/ci-3.11.txt
       if: matrix.python-version == '3.11' || matrix.python-version == '3.12.0-beta.4'
