--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,8 +39,15 @@ Source = "https://github.com/py-pdf/pypdf"
 Changelog = "https://pypdf.readthedocs.io/en/latest/meta/CHANGELOG.html"
 
 [project.optional-dependencies]
-full = ["PyCryptodome", "Pillow>=8.0.0"]
-crypto = ["PyCryptodome"]
+full = [
+    "cryptography; python_version >= '3.7'",
+    "PyCryptodome; python_version == '3.6'",
+    "Pillow>=8.0.0",
+]
+crypto = [
+    "cryptography; python_version >= '3.7'",
+    "PyCryptodome; python_version == '3.6'",
+]
 image = ["Pillow>=8.0.0"]
 dev = ["black", "pip-tools", "pre-commit<2.18.0", "pytest-cov", "pytest-socket", "flit", "wheel"]
 docs = ["sphinx", "sphinx_rtd_theme", "myst_parser"]
