MAINT: Remove unnecessary decorator + mypy fixes
While on it, pre-commit was also updated

Taken from https://github.com/py-pdf/pypdf/pull/2086

Co-authored-by: Lucas Cimon <925560+Lucas-C@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -194,6 +194,9 @@ ignore = [
     "PD011",  # Use `.to_numpy()` instead of `.values`
     "FA102",  # Missing `from __future__ import annotations`, but uses PEP 604 union
     "PERF203",  # `try`-`except` within a loop incurs performance overhead
+    "PYI042",  # Type alias `mode_str_type` should be CamelCase
+    # Ruff bug
+    "PT014",  # Duplicate of test case at index 1 in `@pytest_mark.parametrize`
 ]
 
 [tool.ruff.per-file-ignores]
