GitHub Actions: setup-python for Python 3.12 allow-prerelease: true
Use the current version of Python 3.12 whether it is a pre-release or a production release as discussed at:
https://github.com/actions/setup-python/blob/main/docs/advanced-usage.md#allow-pre-releases

This should run tests on [Python 3.12 rc1](https://www.python.org/download/pre-releases/) instead of hard coding beta 4.

--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12.0-beta.4"]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
         use-crypto-lib: ["pycryptodome"]
         include:
           - python-version: "3.9"
@@ -44,11 +44,12 @@ jobs:
       if: matrix.python-version == '3.6' || matrix.python-version == '3.7' || matrix.python-version == '3.8' || matrix.python-version == '3.9' || matrix.python-version == '3.10'
       with:
         python-version: ${{ matrix.python-version }}
+        allow-prereleases: true
         cache: 'pip'
         cache-dependency-path: '**/requirements/ci.txt'
     - name: Setup Python (3.11+)
       uses: actions/setup-python@v4
-      if: matrix.python-version == '3.11' || matrix.python-version == '3.12.0-beta.4'
+      if: matrix.python-version == '3.11' || matrix.python-version == '3.12'
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
@@ -63,7 +64,7 @@ jobs:
     - name: Install requirements (Python 3.11+)
       run: |
         pip install -r requirements/ci-3.11.txt
-      if: matrix.python-version == '3.11' || matrix.python-version == '3.12.0-beta.4'
+      if: matrix.python-version == '3.11' || matrix.python-version == '3.12'
     - name: Remove pycryptodome
       run: |
         pip uninstall pycryptodome -y
