--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -18,10 +18,10 @@ on:
 jobs:
   tests:
     name: pytest on ${{ matrix.python-version }}
-    runs-on: matrix.os-version
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os-version: ["ubuntu-20.04"]
+        os: ["ubuntu-20.04"]
         python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11"]
         use-crypto-lib: ["pycryptodome"]
         include:
@@ -30,7 +30,7 @@ jobs:
           - python-version: "3.10"
             use-crypto-lib: ""
           - python-version: "3.12"
-            os-version: "ubuntu-22.04"
+            os: "ubuntu-22.04"
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
