--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -20,7 +20,7 @@ jobs:
     name: pytest on ${{ matrix.python-version }}
     strategy:
       matrix:
-        os: ["ubuntu-20.04"]
+        os-version: ["ubuntu-20.04"]
         python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11"]
         use-crypto-lib: ["pycryptodome"]
         include:
@@ -29,8 +29,9 @@ jobs:
           - python-version: "3.10"
             use-crypto-lib: ""
           - python-version: "3.12"
-            os: "ubuntu-22.04"
-    runs-on: ${{ matrix.os }}
+            use-crypto-lib: "pycryptodome"
+            os-version: "ubuntu-22.04"
+    runs-on: ${{ matrix.os-version }}
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
