--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -21,16 +21,13 @@ jobs:
     strategy:
       matrix:
         os-version: ["ubuntu-20.04"]
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
         use-crypto-lib: ["pycryptodome"]
         include:
           - python-version: "3.9"
             use-crypto-lib: "cryptography"
           - python-version: "3.10"
             use-crypto-lib: ""
-          - python-version: "3.12"
-            use-crypto-lib: "pycryptodome"
-            os-version: "ubuntu-22.04"
     runs-on: ${{ matrix.os-version }}
     steps:
     - name: Checkout Code
@@ -48,7 +45,6 @@ jobs:
       if: matrix.python-version == '3.6' || matrix.python-version == '3.7' || matrix.python-version == '3.8' || matrix.python-version == '3.9' || matrix.python-version == '3.10'
       with:
         python-version: ${{ matrix.python-version }}
-        allow-prereleases: true
         cache: 'pip'
         cache-dependency-path: '**/requirements/ci.txt'
     - name: Setup Python (3.11+)
@@ -56,6 +52,7 @@ jobs:
       if: matrix.python-version == '3.11' || matrix.python-version == '3.12'
       with:
         python-version: ${{ matrix.python-version }}
+        allow-prereleases: true
         cache: 'pip'
         cache-dependency-path: '**/requirements/ci-3.11.txt'
     - name: Upgrade pip
