TST: Add test for correct rendering of watermarks (#2130)
This adds a test for the correct rendering of watermarked files.

Closes #2112

--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -30,6 +30,12 @@ jobs:
           - python-version: "3.10"
             use-crypto-lib: ""
     steps:
+    - name: Update APT packages
+      run:
+        sudo apt-get update
+    - name: Install APT dependencies
+      run:
+        sudo apt-get install ghostscript
     - name: Checkout Code
       uses: actions/checkout@v3
       with:
