--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -22,14 +22,12 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         use-crypto-lib: ["cryptography"]
         include:
           - python-version: "3.6"
             use-crypto-lib: "pycryptodome"
-          - python-version: "3.9"
-            use-crypto-lib: "pycryptodome"
-          - python-version: "3.10"
+          - python-version: "3.7"
             use-crypto-lib: ""
     steps:
     - name: Update APT packages
@@ -94,9 +92,6 @@ jobs:
     - name: Test with pytest
       run: |
         python -m coverage run --parallel-mode -m pytest tests -vv
-    - name: Test with mypy
-      run : |
-        mypy pypdf --show-error-codes --disallow-untyped-defs --disallow-incomplete-defs
     - name: Upload coverage data
       uses: actions/upload-artifact@v3
       with:
@@ -112,12 +107,6 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: 'recursive'
-    - name: Cache Downloaded Files
-      id: cache-downloaded-files
-      uses: actions/cache@v3
-      with:
-        path: '**/tests/pdf_cache/*'
-        key: cache-downloaded-files
     - name: Setup Python 3.11
       uses: actions/setup-python@v4
       with:
@@ -137,6 +126,9 @@ jobs:
       run: |
         echo `ruff --version`
         ruff .
+    - name: Test with mypy
+      run : |
+        mypy pypdf
 
   package:
     name: Build & verify package
