--- a/pyproject.toml
+++ b/pyproject.toml
@@ -220,3 +220,10 @@ max-statements = 176  # Recommended: 50
 pre-summary-newline = true
 wrap-summaries = 0
 wrap-descriptions = 0
+
+[tool.mypy]
+show_error_codes = true
+ignore_missing_imports = true
+check_untyped_defs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
