--- a/pyproject.toml
+++ b/pyproject.toml
@@ -227,3 +227,6 @@ ignore_missing_imports = true
 check_untyped_defs = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_unused_configs = true
