--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -92,6 +92,9 @@ jobs:
     - name: Test with pytest
       run: |
         python -m coverage run --parallel-mode -m pytest tests -vv
+    - name: Test with mypy
+      run : |
+        mypy pypdf --show-error-codes --disallow-untyped-defs --disallow-incomplete-defs
     - name: Upload coverage data
       uses: actions/upload-artifact@v3
       with:
@@ -107,6 +110,12 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: 'recursive'
+    - name: Cache Downloaded Files
+      id: cache-downloaded-files
+      uses: actions/cache@v3
+      with:
+        path: '**/tests/pdf_cache/*'
+        key: cache-downloaded-files
     - name: Setup Python 3.11
       uses: actions/setup-python@v4
       with:
@@ -126,9 +135,6 @@ jobs:
       run: |
         echo `ruff --version`
         ruff .
-    - name: Test with mypy
-      run : |
-        mypy pypdf
 
   package:
     name: Build & verify package
