DEV: Use pytest-xdist

--- a/requirements/ci.in
+++ b/requirements/ci.in
@@ -11,6 +11,7 @@ pytest
 pytest-benchmark
 pytest-socket
 pytest-timeout
+pytest-xdist
 # ruff  # only take this for 3.11
 typeguard
 types-dataclasses
