--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -91,7 +91,7 @@ jobs:
         python -c "from tests import download_test_pdfs; download_test_pdfs()"
     - name: Test with pytest
       run: |
-        python -m coverage run --parallel-mode -m pytest tests -vv
+        python -m coverage run --parallel-mode -m pytest tests -n auto -vv
     - name: Upload coverage data
       uses: actions/upload-artifact@v3
       with:
