data file is .coverage

--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -96,7 +96,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: coverage-data
-        path: .coverage.*
+        path: .coverage
         if-no-files-found: ignore
 
   codestyle:
