--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -92,11 +92,13 @@ jobs:
     - name: Test with pytest
       run: |
         python -m pytest tests --cov=pypdf --cov-append -n auto -vv
+    - name: Rename coverage data file
+      run: mv .coverage ".coverage.$RANDOM"
     - name: Upload coverage data
       uses: actions/upload-artifact@v3
       with:
         name: coverage-data
-        path: .coverage
+        path: .coverage.*
         if-no-files-found: ignore
 
   codestyle:
@@ -171,8 +173,9 @@ jobs:
           name: coverage-data
 
       - name: Combine coverage & create xml report
-        # python -m coverage combine
-        run: python -m coverage xml
+        run: |
+          python -m coverage combine
+          python -m coverage xml
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
