--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -172,6 +172,16 @@ jobs:
         with:
           name: coverage-data
 
+      - name: Check Number of Downloaded Files
+        run: |
+          downloaded_files_count=$(find coverage-data -type f | wc -l)
+          if [ $downloaded_files_count -eq 7 ]; then
+            echo "The expected number of files (7) were downloaded."
+          else
+            echo "ERROR: Expected 7 files, but found $downloaded_files_count files."
+            exit 1
+          fi
+
       - name: Combine coverage & create xml report
         run: |
           python -m coverage combine
