--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -17,6 +17,39 @@ on:
   workflow_dispatch:
 
 jobs:
+  test_windows:
+    name: pytest on windows
+    runs-on: windows-latest
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
+    - name: Setup Python (3.11+)
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11  # latest stable python
+        allow-prereleases: true
+    - name: Upgrade pip
+      run: |
+        python -m pip install --upgrade pip
+    - name: Install requirements (Python 3.11+)
+      run: |
+        pip install -r requirements/ci-3.11.txt
+    - name: Install cryptography
+      run: |
+        pip install cryptography
+    - name: Install pypdf
+      run: |
+        pip install .
+    - name: Prepare
+      run: |
+        python -c "from tests import download_test_pdfs; download_test_pdfs()"
+    - name: Test with pytest
+      run: |
+        python -m coverage run --parallel-mode -m pytest tests -vv
+
+
   tests:
     name: pytest on ${{ matrix.python-version }}
     runs-on: ubuntu-20.04
