DEV: Use pytest-xdist (#2254)
This was added so that CI goes down from about 14min 23s to about 9min 20s

Please note that individual runs depend heavily on factors outside of our control (likely Github CI test runner hardware)

--- a/requirements/ci.in
+++ b/requirements/ci.in
@@ -11,6 +11,8 @@ pytest
 pytest-benchmark
 pytest-socket
 pytest-timeout
+pytest-xdist
+pytest-cov
 # ruff  # only take this for 3.11
 typeguard
 types-dataclasses
