--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -47,7 +47,7 @@ jobs:
         python -c "from tests import download_test_pdfs; download_test_pdfs()"
     - name: Test with pytest
       run: |
-        python -m coverage run --parallel-mode -m pytest tests -vv
+        python -m pytest tests --cov=pypdf --cov-append -n auto -vv
 
 
   tests:
