--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -51,17 +51,17 @@ jobs:
 
 
   tests:
-    name: pytest on ${{ matrix.python-version }}
+    name: "pytest on ${{ matrix.python-version }} (crypto-lib: ${{ matrix.use-crypto-lib }})"
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
         use-crypto-lib: ["cryptography"]
         include:
           - python-version: "3.6"
             use-crypto-lib: "pycryptodome"
           - python-version: "3.7"
-            use-crypto-lib: ""
+            use-crypto-lib: "none"
     steps:
     - name: Update APT packages
       run:
