TST: Add xfail test for #2336

--- a/tests/example_files.yaml
+++ b/tests/example_files.yaml
@@ -110,3 +110,5 @@
   url: https://github.com/py-pdf/pypdf/assets/4083478/56c93021-33cd-4387-ae13-5cbe7e673f42
 - local_filename: paid.pdf
   url: https://github.com/py-pdf/pypdf/files/12050253/tt.pdf
+- local_filename: Pesquisa-de-Precos-Combustiveis-novembro-2023.pdf
+  url: https://www.joinville.sc.gov.br/wp-content/uploads/2023/11/Pesquisa-de-Precos-Combustiveis-novembro-2023.pdf
