DEP: Drop Python 3.6 support
This does not mean that pypdf doesn't run with Python 3.6 anymore.
It means that we don't run CI with Python 3.6 and don't give any
guarantees.

See https://github.com/py-pdf/pypdf/discussions/2005

--- a/requirements/docs.in
+++ b/requirements/docs.in
@@ -1,4 +1,4 @@
 sphinx
-sphinx_rtd_theme
+sphinx_rtd_theme<2.0.0
 myst_parser==0.16.1
 attrs  # required for myst, but not automatically installed by myst
