DEV: Ensure that the PR titles have the correct format

--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -164,6 +164,12 @@ jobs:
     - name: Test with mypy
       run : |
         mypy pypdf
+    - name: Check PR title
+      env:
+          PR_TITLE: ${{ github.event.pull_request.title }}
+      run: |
+          python .github/scripts/check_pr_title.py
+      if: github.event_name == 'pull_request'
 
   package:
     name: Build & verify package
