Move title check to own job

--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -164,12 +164,17 @@ jobs:
     - name: Test with mypy
       run : |
         mypy pypdf
-    - name: Check PR title
-      env:
+  
+  title-check:
+    name: Title check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check PR title
+        env:
           PR_TITLE: ${{ github.event.pull_request.title }}
-      run: |
+        run: |
           python .github/scripts/check_pr_title.py
-      if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request'
 
   package:
     name: Build & verify package
