--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -169,6 +169,8 @@ jobs:
     name: Title check
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
       - name: Check PR title
         env:
           PR_TITLE: ${{ github.event.pull_request.title }}
