--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,11 +3,11 @@ version: 2
 
 
 build:
-  os: ubuntu-22.04
+  os: ubuntu-lts-latest
   tools:
-    python: "3.11"
+    python: "3.12"
 
-# Build documentation in the docs/ directory with Sphinx
+# Build documentation in the "docs/" directory with Sphinx
 sphinx:
    configuration: docs/conf.py
 
