--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,8 +45,8 @@ full = [
     "Pillow>=10.3.0",
 ]
 crypto = [
-    "cryptography; python_version >= '3.8'",
-    "PyCryptodome; python_version >= '3.6'",
+    "cryptography; python_version >= '3.7'",
+    "PyCryptodome; python_version == '3.6'",
 ]
 image = ["Pillow>=10.3.0"]
 dev = ["black", "pip-tools", "pre-commit<2.18.0", "pytest-cov", "pytest-socket", "pytest-timeout", "flit", "wheel", "pytest-xdist"]
