DOC: Use latest package versions
While fixing some old/broken reference syntax, some new references I stumbled
upon while reviewing the docs have been added.

--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -170,7 +170,7 @@ jobs:
     - name: Test docs build
       run: |
         pip install -r requirements/docs.txt
-        sphinx-build -n -W --keep-going -T -b html docs build/sphinx/html
+        sphinx-build --nitpicky --fail-on-warning --keep-going --show-traceback --builder html docs build/sphinx/html
 
   package:
     name: Build & verify package
